SF Primes/src/objects/Finance_Churn_Prevention__c.object
<CustomObject>
    <description>Not Used</description>
    <fields>
        <fullName>ADP_Bureau_Status__c</fullName>
        <label>ADP Bureau Status</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Model_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMF_Number__c</fullName>
        <label>CMF Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type_Notes__c</fullName>
        <label>Call Type Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>Associate Follow Up Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collector Escalation Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Client Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Installation Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Escalation Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Churn_Score__c</fullName>
        <label>Churn Score</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Last Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Invoice_From__c</fullName>
        <label>Credit Bureau Invoice From?</label>
        <picklist>
            <picklistValues>
                <fullName>700 Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equifax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trans Union</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credit_Providers__c</fullName>
        <label>Credit Providers</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experian Dir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transunion Dir</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Bureau_Locations__c</fullName>
        <label>Application Providers</label>
        <picklist>
            <picklistValues>
                <fullName>700 Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Centric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experian Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMagicLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trans Union Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Custom_Save_Justification__c</fullName>
        <label>Custom Save Justification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Warehouse__c</fullName>
        <formula>hyperlink(&quot;http://dsows1he.hoffman.ds.adp.com/dwapp_public/customer_detail?cd_cmf=&quot; &amp;  CMF_Number__c , &quot;Data Warehouse&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Warehouse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Situation_Summary__c</fullName>
        <label>Dealer Situation Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Comments__c</fullName>
        <label>Decision Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equifax_RI_Last_Modified_User__c</fullName>
        <label>Equifax RI Last Modified User</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_RI_Last_Modified__c</fullName>
        <label>EQ Installer Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equifax_RI_Modified_UserDate__c</fullName>
        <label>Equifax RI Modified UserDate</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_RI_Save_Amount__c</fullName>
        <label>EQ Installer Save Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_SUP_Last_Modified_User__c</fullName>
        <label>Equifax SUP Last Modified User</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_SUP_Last_Modified__c</fullName>
        <label>Equifax SUP Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equifax_SUP_Modified_UserDate__c</fullName>
        <label>EQ Supervisor Last Modified</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_SUP_Save_Amount__c</fullName>
        <label>EQ Supervisor Save Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_RI_Last_Modified_User__c</fullName>
        <label>Experian RI Last Modified User</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_RI_Last_Modified__c</fullName>
        <label>Experian RI Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Experian_RI_Modified_UserDate__c</fullName>
        <label>EX Installer Last Modified</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_RI_Save_Amount__c</fullName>
        <label>EX Installer Save Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_SUP_Last_Modified_User__c</fullName>
        <label>Experian SUP Last Modified User</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_SUP_Last_Modified__c</fullName>
        <label>Experian SUP Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Experian_SUP_Modified_UserDate__c</fullName>
        <label>EX Supervisor Last Modified</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_SUP_Save_Amount__c</fullName>
        <label>EX Supervisor Save Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <label>Installer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Complete-Engage/Complete-Loss</label>
        <picklist>
            <picklistValues>
                <fullName>Not Touched</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Model_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Recommended_Action__c</fullName>
        <label>Last Recommended Action</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Job_Number__c</fullName>
        <label>Model Job Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Credit_Users__c</fullName>
        <label>How Many Credit Check Users?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partyid__c</fullName>
        <externalId>true</externalId>
        <label>Partyid</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECID__c</fullName>
        <label>RECID__C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_For_Switch__c</fullName>
        <label>Reason For Switch?</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Tool</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <label>Recommended Action</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Date__c</fullName>
        <label>Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Save_Values__c</fullName>
        <label>Standard Save Values</label>
        <picklist>
            <picklistValues>
                <fullName>.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Factors__c</fullName>
        <label>Job Closure Factors</label>
        <picklist>
            <picklistValues>
                <fullName>Bill By Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS System Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TT_ADP_Decision__c</fullName>
        <label>Has Your Decision To Use ADP Changed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TT_Bureau_Change_Comments__c</fullName>
        <label>TT_Bureau_Change_Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TT_Bureau_Change__c</fullName>
        <label>Do you have a Bureau change?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TT_Use_Same_Bureau__c</fullName>
        <label>Does Sales and F&amp;I use same platform?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_For_Your_Users__c</fullName>
        <label>Dealer Accepted Additional Training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trans_Union_RI_Last_Modified_User__c</fullName>
        <label>TU Installer Last Modified</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Union_RI_Last_Modified__c</fullName>
        <label>Trans Union RI Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trans_Union_RI_Modified_UserDate__c</fullName>
        <label>Trans Union RI Modified UserDate</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Union_RI_Save_Amount__c</fullName>
        <label>TU Installer Save Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Union_SUP_Last_Modified_User__c</fullName>
        <label>Trans Union SUP Last Modified User</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Union_SUP_Last_Modified__c</fullName>
        <label>Trans Union SUP Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trans_Union_SUP_Modified_UserDate__c</fullName>
        <label>TU Supervisor Last Modified</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Union_SUP_Save_Amount__c</fullName>
        <label>TU Supervisor Save Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilizing_Consultant__c</fullName>
        <label>Utilizing Consultant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Finance Churn Prevention</label>
    <nameField>
        <displayFormat>FCP-{0000000}</displayFormat>
        <label>Finance Churn Prevention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Churn Prevention</pluralLabel>
    <recordTypes>
        <fullName>Completed_Job</fullName>
        <active>true</active>
        <description>Record Type to make all data read only when status is complete.</description>
        <label>Completed Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Job</fullName>
        <active>true</active>
        <label>Standard Job</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>